--- a/simple/src/main/res/layout/item_integer.xml
+++ b/simple/src/main/res/layout/item_integer.xml
@@ -11,10 +11,9 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="#999"
         android:gravity="center_vertical"
         android:padding="8dp"
-        android:textColor="#fff"
         tools:text="@string/app_name" />
 
 </LinearLayout>
