--- a/simple/src/main/res/layout/item_string.xml
+++ b/simple/src/main/res/layout/item_string.xml
@@ -11,6 +11,7 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#BBB"
         android:gravity="center_vertical"
         android:padding="8dp"
         tools:text="@string/app_name" />
