--- a/simple/src/main/res/layout/item_string.xml
+++ b/simple/src/main/res/layout/item_string.xml
@@ -14,6 +14,7 @@
         android:background="#BBB"
         android:gravity="center_vertical"
         android:padding="8dp"
+        android:textSize="20sp"
         tools:text="@string/app_name" />
 
 </LinearLayout>
