--- a/prefs/src/main/res/layout/pref_listitem_general.xml
+++ b/prefs/src/main/res/layout/pref_listitem_general.xml
@@ -10,12 +10,12 @@
 
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_Title"
+            android:id="@+id/pref_title"
             style="@style/Prefs_ListItem_Title"
             tools:text="Title" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_Summary"
+            android:id="@+id/pref_summary"
             style="@style/Prefs_ListItem_Summary"
             tools:text="This Summary ." />
 
