--- a/prefs/src/main/res/layout/pref_listitem_switch.xml
+++ b/prefs/src/main/res/layout/pref_listitem_switch.xml
@@ -17,19 +17,19 @@
             android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_Title"
+                android:id="@+id/pref_title"
                 style="@style/Prefs_ListItem_Title"
                 tools:text="Title" />
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_Summary"
+                android:id="@+id/pref_summary"
                 style="@style/Prefs_ListItem_Summary"
                 tools:text="This Summary ." />
 
         </LinearLayout>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
-            android:id="@+id/switch_widget"
+            android:id="@+id/pref_switch_widget"
             style="@style/Prefs_ListItem_CompoundButton_Switch"
             tools:checked="true" />
 
