--- a/prefs/src/main/res/layout/pref_listitem_general.xml
+++ b/prefs/src/main/res/layout/pref_listitem_general.xml
@@ -4,7 +4,7 @@
     style="@style/Prefs_ListItem_Root">
 
     <LinearLayout
-        android:id="@+id/itemLayout"
+        android:id="@+id/pref_item_layout"
         style="@style/Prefs_ListItem_ItemLayout"
         android:orientation="vertical">
 
@@ -20,4 +20,5 @@
             tools:text="This Summary ." />
 
     </LinearLayout>
+
 </FrameLayout>
