--- a/prefs/src/main/res/layout/pref_listitem_switch.xml
+++ b/prefs/src/main/res/layout/pref_listitem_switch.xml
@@ -5,7 +5,7 @@
 
 
     <LinearLayout
-        android:id="@+id/itemLayout"
+        android:id="@+id/pref_item_layout"
         style="@style/Prefs_ListItem_ItemLayout"
         android:gravity="center"
         android:orientation="horizontal">
