--- a/prefs/src/main/res/values/prefs_listitem_styles.xml
+++ b/prefs/src/main/res/values/prefs_listitem_styles.xml
@@ -24,6 +24,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:clickable">false</item>
         <item name="android:focusable">false</item>
+        <item name="android:background">@null</item>
     </style>
 
     <style name="Prefs_ListItem_CompoundButton_Radio">
@@ -31,6 +32,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:clickable">false</item>
         <item name="android:focusable">false</item>
+        <item name="android:background">@null</item>
     </style>
 
     <style name="Prefs_ListItem_CompoundButton_CheckBox">
@@ -38,6 +40,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:clickable">false</item>
         <item name="android:focusable">false</item>
+        <item name="android:background">@null</item>
     </style>
 
 
