--- a/preference/src/main/res/layout/preference_listitem_switch.xml
+++ b/preference/src/main/res/layout/preference_listitem_switch.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             style="@style/Preference_ListItem_Root">
-
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/preference_item_layout"
+        style="@style/Preference_ListItem_ItemLayout"
+        android:gravity="center"
+        android:orientation="horizontal">
 
     <LinearLayout
-            android:id="@+id/preference_item_layout"
-            style="@style/Preference_ListItem_ItemLayout"
-            android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/preference_title"
+                style="@style/Preference_ListItem_Title"
+                tools:text="Title"/>
 
-            <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/preference_title"
-                    style="@style/Preference_ListItem_Title"
-                    tools:text="Title"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/preference_summary"
-                    style="@style/Preference_ListItem_Summary"
-                    tools:text="This Summary ."/>
-
-        </LinearLayout>
-
-        <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/preference_compound_button"
-                style="@style/Preference_ListItem_CompoundButton_Switch"
-                tools:checked="true"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/preference_summary"
+                style="@style/Preference_ListItem_Summary"
+                tools:text="This Summary ."/>
 
     </LinearLayout>
 
-</FrameLayout>
+    <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/preference_compound_button"
+            style="@style/Preference_ListItem_CompoundButton_Switch"
+            tools:checked="true"
+    />
+
+</LinearLayout>
+
