--- a/preference/src/main/res/layout/preference_listitem_multichoiceitems.xml
+++ b/preference/src/main/res/layout/preference_listitem_multichoiceitems.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/preference_item_layout"
         style="@style/Preference_ListItem_ItemLayout"
         android:orientation="vertical">
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/preference_title"
-            style="@style/Preference_ListItem_Title"
-            tools:text="Title"/>
+    <include layout="@layout/preference_merged_title"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/preference_summary"
-            style="@style/Preference_ListItem_Summary"
-            tools:text="This Summary ."/>
+    <include layout="@layout/preference_merged_summary"/>
+
 
 </LinearLayout>
