--- a/preference/src/main/res/layout/preference_listitem_radio.xml
+++ b/preference/src/main/res/layout/preference_listitem_radio.xml
@@ -13,15 +13,10 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/preference_title"
-                style="@style/Preference_ListItem_Title"
-                tools:text="Title"/>
+        <include layout="@layout/preference_merged_title"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/preference_summary"
-                style="@style/Preference_ListItem_Summary"
-                tools:text="This Summary ."/>
+        <include layout="@layout/preference_merged_summary"/>
+
 
     </LinearLayout>
 
