--- a/preference/src/main/res/layout/preference_dialog_edittext.xml
+++ b/preference/src/main/res/layout/preference_dialog_edittext.xml
@@ -20,8 +20,9 @@
                 android:id="@+id/textInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="32dp"
+                android:layout_marginTop="32dp"
                 android:minHeight="60dp"
+
         />
 
     </com.google.android.material.textfield.TextInputLayout>
