--- a/preference/src/main/res/layout/preference_dialog_edittext.xml
+++ b/preference/src/main/res/layout/preference_dialog_edittext.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
 >
@@ -14,15 +14,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:boxBackgroundColor="@null"
+            android:layout_marginTop="6dp"
     >
 
         <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/textInputEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:scrollbars="vertical"
                 android:minHeight="60dp"
-
         />
 
     </com.google.android.material.textfield.TextInputLayout>
